Refine relay event payload mapping